--- a/para_config.ini
+++ b/para_config.ini
@@ -5,7 +5,7 @@ max_step =3600
 green_duration = 5
 yellow_duration = 2
 sim_seed = 42
-
+agent_type = IQL_att
 [model]
 num_layers = 4
 width_layers = 400
