revise code structure

--- a/para_config.ini
+++ b/para_config.ini
@@ -9,9 +9,7 @@ agent_type = IQL_Attention
 seq_len = 2
 
 [model]
-num_layers = 4
-width_layers = 400
-learning_rate = 0.001
+
 
 [memory]
 buffer_size = 500
@@ -27,6 +25,8 @@ gamma = 0.9
 coef_reward = 0.1
 epsilon_init = 0.99
 tau = 0.05
+hidden_dim = 32
+learning_rate = 0.001
 
 [dir]
 models_path_name = models
