--- a/para_config.ini
+++ b/para_config.ini
@@ -1,32 +1,34 @@
 [simulation]
 gui = False
-total_episodes = 200
+total_episodes = 100
 max_step =3600
 green_duration = 5
 yellow_duration = 2
 sim_seed = 42
-agent_type = IQL_Attention
-seq_len = 2
-
-[model]
-
-
-[memory]
-buffer_size = 2000
-batch_size = 16
-
-[agent]
-update_step = 100
 num_states_obs = 4
 num_states_phase = 4
 num_states_lanes = 12
 num_actions = 4
-gamma = 0.9
+num_neighbors = 5
 coef_reward = 0.1
-epsilon_init = 0.99
-tau = 0.05
-hidden_dim = 32
-learning_rate = 0.001
+
+[model]
+agent_type = IQL_Attention
+seq_len = 4
+hidden_dim = 64
+n_heads = 8
+
+[memory]
+buffer_size = 1000
+batch_size = 128
+
+[agent]
+update_step = 80
+gamma = 0.9
+epsilon_final = 0.1
+epsilon_init = 1
+tau = 0.01
+lr = 0.001
 
 [dir]
 models_path_name = models
