para sharing test

--- a/para_config.ini
+++ b/para_config.ini
@@ -12,17 +12,17 @@ num_neighbors = 5
 coef_reward = 0.1
 
 [model]
-agent_type = IQL_Attention
+agent_type = IQL
 seq_len = 4
 hidden_dim = 64
 n_heads = 8
 
 [memory]
 buffer_size = 1000
-batch_size = 128
+batch_size = 64
 
 [agent]
-update_step = 80
+update_step = 40
 gamma = 0.9
 epsilon_final = 0.1
 epsilon_init = 1
